--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: custom_paint_tutorial
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=3.3.0 <4.0.0"
 dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  google_fonts: ^2.0.0
-  intl: ^0.17.0
+  google_fonts: ^6.1.0
+  intl: ^0.19.0
 dev_dependencies:
-  flutter_lints: ^1.0.0
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 flutter:
@@ -21,17 +21,15 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Giga Sans
+      fonts:
+        - asset: assets/Fontspring-DEMO-gigasans-black.otf
+          weight: 700
+        - asset: assets/Fontspring-DEMO-gigasans-bold.otf
+          weight: 600
+        - asset: assets/Fontspring-DEMO-gigasans-light.otf
+          weight: 400
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
